--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My trial repository</title>
 </head>
 <body>
-    
+    <h1> My first repository code sending</h1>
+    <h2> I am trying to send it to github</h2>
 </body>
 </html>
