--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1> My first repository code sending</h1>
     <h2> I am trying to send it to github</h2>
+    <h1> My first repository code sending</h1>
+    <h2> I am trying to send it to github</h2>
+    <link rel="stylesheet" href="style.css">
 </body>
 </html>
